# Philosopher ?
### Build: ?

### Added
### Changed
### Fixed

# Philosopher 20180125
### Build: 201801251604

### Added
- New command Pipeline for automated processing

### Changed
- Path definition for windows system got updated.

### Fixed
- Cluster command is appending UniProt data again to the final report.
- Some programs were been deployed with the wrong path definition on some windows versions.
- Minor bugs and issues.

# Philosopher 20180122
### Build: 201801221051

### Added
- TMT quantification based on unique peptides only for the Abacus report.

### Changed

### Fixed
- Minor bugs fixed for the Abacus report generation.

# Philosopher 20180115
### Build: 201801151336

### Changed
- The Versioning system was updated

# Philosopher 20180104
### Build: 20180104.1659

### Added
- PickedFDR option added to the Abacus report.

### Changed
- Philosopher version changed to a time-based system.
- An automatic update checker was added.
- Total Ions column removed from the Abacus report.

### Fixed

## [2.1] - 2017-12-20
### Version: 20171220
### Build: 20171220.1144

### Added
- Support to Slack! you can now do push notifications on Slack channels.
- Now the Comet command checks for the extension of the mz files, it skips files that are not supported for indexing, Database search keeps working the same way.

### Changed
- The Protein column on the reports will be replaced by the Razor Protein when the option is added.

### Fixed
- Some reports were showing empty protein columns.

## [2.0] - 2017-12-14
### Added
- A new parameter on Filter adds more flexibility to the definition of a 'Unique' peptide.
- A new parameter on labelquant allows to report quantification on 'unique-only' peptides (no razor).
- Comet function now has an indexing step that creates indexes from mzML files.

### Changed
- Report and TMT report have their headers fixed, Razor ions are showing again.
- non-modified peptides are now ignored from the TMT quantification.